[package]
name = "juno-api"
version = "0.1.0"
authors = ["matheussecundo <matheus.gois@dcomp.ufs.br>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.52"
ttl_cache = "0.5.1"
reqwest = {version = "0.10.4", features = ["json", "blocking"]}
base64 = "0.13.0"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = {version = "0.2.*", features = ["full"] }
futures = "0.3"