[package]
authors = ["matheussecundo <matheus.gois@dcomp.ufs.br>"]
edition = "2018"
name = "juno-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
reqwest = {version = "0.10.4", features = ["json", "blocking"]}
serde_json = "1.0.52"
ttl_cache = "0.5.1"

[dev-dependencies]
futures = "0.3"
tokio = {version = "0.2.*", features = ["full"]}
